changed font style

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* CSS Reset */
 body {
-  font-family: "Baloo Bhai", cursive;
+  font-family: 'Montserrat', sans-serif;
   color: white;
   margin: 0px;
   padding: 0px;
