--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body {
   color: white;
   margin: 0px;
   padding: 0px;
-  background: url("https://images.unsplash.com/photo-1581009146145-b5ef050c2e1e?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fGd5bXxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&w=1000&q=80");
+  background: url("../img/bg.jpg");
 }
 
 .left {
