--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@ body {
   color: white;
   margin: 0px;
   padding: 0px;
-  background: url("../img/bg.jpg");
+  background: url("https://images.pexels.com/photos/1552249/pexels-photo-1552249.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+  background-position: top;
 }
 
 .left {
